Fatal warnings for Java code